refactored some components - added DiscordStatus to about - Updated projects - Added tags to each project - Fixed some text styling

--- a/src/components/DiscordStatus.astro
+++ b/src/components/DiscordStatus.astro
@@ -16,33 +16,31 @@ const statusText = {
 ---
 <section id="discord-status">
   <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6ca814282eca7172c6_icon_clyde_white_RGB.svg" alt="Discord Avatar" />
-  <h2>Status: <span id="status-text"></span></h2>
+  <h2><span id="status-text"></span></h2>
 </section>
 
 <style>
   #discord-status {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 15px;
     border-radius: 10px;
     color: white;
     transition: background-color 0.3s ease-in-out;
   }
 
   #discord-status img {
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     margin-right: 20px;
   }
 
   #discord-status h2 {
-    margin: 0;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   #discord-status p {
-    margin: 0;
     font-size: 1rem;
     opacity: 0.8;
   }
