--- a/src/pages/coursework.astro
+++ b/src/pages/coursework.astro
@@ -51,6 +51,10 @@ const in4mtxCourses = [
 
 <Layout title="Pinapelz">
   <h1>Relevant Coursework</h1>
+  <h2>
+    Here are some of the course I've taken at UCI. <br/>
+    ICS stands for Information and Computer Science, and IN4MTX stands for Informatics.
+  </h2>
   <div class="coursework-container">
     <div class="course-segment">
       <h2 class="text-gradient">ICS Courses</h2>
@@ -119,8 +123,16 @@ const in4mtxCourses = [
     color: white;
     line-height: 1;
     text-align: center;
-    margin-bottom: 1em;
+    margin-bottom:0.5em;
+    margin-top: 2rem;
     transition: transform 0.3s ease-in-out;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 2rem;
+    text-align: center;
   }
 
   .welcome-text-gradient {
