--- a/src/components/SocialNavbar.astro
+++ b/src/components/SocialNavbar.astro
@@ -81,5 +81,8 @@ import "@fortawesome/fontawesome-free/css/all.min.css";
     <a href="https://pinapelz.moe" class="dark-social-icon" title="pinapelz.moe"
       ><i class="fa fa-globe"></i></a
     >
+    <a href="/Yukai_Shan.asc" class="dark-social-icon" title="PGP"
+      ><i class="fa fa-key"></i></a
+      >
   </div>
 </div>
