update twitter icon to X

--- a/src/components/SocialNavbar.astro
+++ b/src/components/SocialNavbar.astro
@@ -65,7 +65,7 @@ import "@fortawesome/fontawesome-free/css/all.min.css";
     <a
       href="https://twitter.com/pinapelz"
       class="dark-social-icon"
-      title="Twitter"><i class="fab fa-twitter"></i></a
+      title="Twitter/X"><i class="fab fa-x-twitter"></i></a
     >
     <a href="https://blog.pinapelz.com" class="dark-social-icon" title="Blog"
       ><i class="fa fa-book"></i></a
