add Redis to linkshortener card

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -83,7 +83,7 @@ import Card from "../components/Card.astro";
         language="Python"
         languageColor="#3572A5"
         year="2023"
-        tags={["Python", "Flask", "PostgreSQL"]}
+        tags={["Python", "Flask", "Postgres", "Redis"]}
       />
       <Card
         href="https://github.com/pinapelz.com"
