update repo names

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -68,13 +68,13 @@ import Card from "../components/Card.astro";
         tags={["Java", "JDA"]}
       />
       <Card
-        href="https://github.com/pinapelz/link-shortener-moe-vercel"
-        title="Moe Link Shortener"
-        body="A fully serverless Flask link shortener that can be customized and deployed to Vercel with 1 click.Deploys as a fullstack app on Vercel"
+        href="https://github.com/pinapelz/moekyun-me-link-shortener"
+        title="Moekyun Me Link Shortener"
+        body="A fully serverless Flask link shortener that can be customized and deployed to Vercel with 1 click. Deploys as a fullstack app on Vercel"
         language="HTML"
         languageColor="#e34c26"
         year="2023"
-        tags={["HTML", "Flask", "Python", "PostgreSQL"]}
+        tags={["HTML", "Flask", "Python", "Postgres", "Redis"]}
       />
       <Card
         href="https://github.com/pinapelz/vtuber-captcha"
