personal page -> mojibaka

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -86,13 +86,13 @@ import Card from "../components/Card.astro";
         tags={["Python", "Flask", "Postgres", "Redis"]}
       />
       <Card
-        href="https://github.com/pinapelz.com"
-        title="Personal Website"
-        body="This website! Fully built using Astro, a superset of HTML (and so is my blog linked in the buttons down below)"
-        language="Astro"
-        languageColor="#ff5a03",
+        href="https://github.com/pinapelz/mojibaka"
+        title="Mojibaka"
+        body="A simple to use web app that fixes corrupted texts due to encoding/decoding in incorrect charsets."
+        language="Python"
+        languageColor="#3572A5",
         year="2023"
-        tags={["Astro", "HTML", "Tailwind", "Javascript"]}
+        tags={["Flask", "Tailwind", "Python"]}
       />
     </ul>
   </main>
