--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -77,22 +77,22 @@ import Card from "../components/Card.astro";
         tags={["HTML", "Flask", "Python", "Postgres", "Redis"]}
       />
       <Card
-        href="https://github.com/pinapelz/vtuber-captcha"
-        title="Vtuber Captcha"
-        body="A bring your own UI captcha API that uses VTuber images to verify that the user is human. Verifies answers server-side!"
-        language="Python"
-        languageColor="#3572A5"
+        href="https://github.com/pinapelz/IMissVTuber"
+        title="IMissVtuber"
+        body="A boilerplate template application for easily deploying a fansite for any VTuber listed on Holodex"
+        language="Typescript"
+        languageColor="#3178c6"
         year="2023"
-        tags={["Python", "Flask", "Postgres", "Redis"]}
+        tags={["Next", "Typescript", "React"]}
       />
       <Card
-        href="https://github.com/pinapelz/mojibaka"
-        title="Mojibaka"
-        body="A simple to use web app that fixes corrupted texts due to encoding/decoding in incorrect charsets."
-        language="Python"
-        languageColor="#3572A5",
+        href="https://github.com/pinapelz/pinapelz.github.io"
+        title="Blog"
+        body="My personal blog. A lot of technical rambling and random stuff that I wanted to get written down somewhere"
+        language="Astro"
+        languageColor="#ff5a03",
         year="2023"
-        tags={["Flask", "Tailwind", "Python"]}
+        tags={["Astro", "Blog", "Writing"]}
       />
     </ul>
   </main>
