--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -86,13 +86,13 @@ import Card from "../components/Card.astro";
         tags={["Next", "Typescript", "React"]}
       />
       <Card
-        href="https://github.com/pinapelz/pinapelz.github.io"
-        title="Blog"
-        body="My personal blog. A lot of technical rambling and random stuff that I wanted to get written down somewhere"
-        language="Astro"
-        languageColor="#ff5a03",
-        year="2023"
-        tags={["Astro", "Blog", "Writing"]}
+        href="https://github.com/pinapelz/Signpost"
+        title="Signpost"
+        body="A KV storage solution designed for hosting plaintext data for whatever purpose you need. Designed to host announcements/data for web aplications"
+        language="Typescript"
+        languageColor="#3178c6",
+        year="2024"
+        tags={["Vite", "React", "Typescript"]}
       />
     </ul>
   </main>
