add links to tools in projects

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -95,6 +95,7 @@ import Card from "../components/Card.astro";
         tags={["Vite", "React", "Typescript"]}
       />
     </ul>
+    <a href="https://knowledge.pinapelz.com/personal/tools" class="mt-2 hover:underline font-bold text-3xl">and some other smaller fun tools...</a>
   </main>
   <SocialNavbar />
   <style>
