sort projects by date

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,8 +9,8 @@ import Card from "../components/Card.astro";
     <h1 class="text-4xl font-semibold text-center py-6">Projects</h1>
     <p class="text-center mb-4">
       Here are some of my projects. I love tinkering with stuff so for a more complete list, visit my <a class="font-bold" href="https://github.com/pinapelz">Github</a>
-      <br/>
-      Also visit here for some <a class="font-bold" href="/contributions">open source stuff</a>
+      </br>
+      <a href="/contributions" class="mt-2 hover:underline text-center font-bold text-3xl animate-pulse">Open Source Contributions</a>
     </p>
     <ul role="list" class="link-card-grid">
       <Card
@@ -21,6 +21,15 @@ import Card from "../components/Card.astro";
         languageColor="#b07219"
         year="2022"
         tags={["Java", "Swing"]}
+      />
+            <Card
+        href="https://github.com/pinapelz/yet-another-lavaplayer-bot"
+        title="Yet Another Lavaplayer Bot"
+        body="Self-hosted JDA Discord music bot that uses Lavaplayer to play music from YouTube, Soundcloud, etc in Discord voice channels"
+        language="Java"
+        languageColor="#b07219"
+        year="2022"
+        tags={["Java", "JDA"]}
       />
       <Card
         href="https://github.com/Patchwork-Archive/Patchwork-Karaoke"
@@ -59,15 +68,6 @@ import Card from "../components/Card.astro";
         tags={["React", "Python", "MySQL" , "S3 Storage", "Tailwind"]}
       />
       <Card
-        href="https://github.com/pinapelz/yet-another-lavaplayer-bot"
-        title="Yet Another Lavaplayer Bot"
-        body="Self-hosted JDA Discord music bot that uses Lavaplayer to play music from YouTube, Soundcloud, etc in Discord voice channels"
-        language="Java"
-        languageColor="#b07219"
-        year="2022"
-        tags={["Java", "JDA"]}
-      />
-      <Card
         href="https://github.com/pinapelz/moekyun-me-link-shortener"
         title="Moekyun Me Link Shortener"
         body="A fully serverless Flask link shortener that can be customized and deployed to Vercel with 1 click. Deploys as a fullstack app on Vercel"
@@ -92,10 +92,11 @@ import Card from "../components/Card.astro";
         language="Typescript"
         languageColor="#3178c6",
         year="2024"
-        tags={["Vite", "React", "Typescript"]}
+        tags={["Vite", "React", "Typescript", "Redis"]}
       />
     </ul>
-    <a href="https://knowledge.pinapelz.com/personal/tools" class="mt-2 hover:underline font-bold text-3xl">and some other smaller fun tools...</a>
+    <br/>
+    <a href="https://knowledge.pinapelz.com/personal/tools" class="mt-2 hover:underline text-2xl animate-pulse">and also a few smaller tools...</a>
   </main>
   <SocialNavbar />
   <style>
