extend projects page for another row

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -70,9 +70,9 @@ import Card from "../components/Card.astro";
       <Card
         href="https://github.com/pinapelz/moekyun-me-link-shortener"
         title="Moekyun Me Link Shortener"
-        body="A fully serverless Flask link shortener that can be customized and deployed to Vercel with 1 click. Deploys as a fullstack app on Vercel"
-        language="HTML"
-        languageColor="#e34c26"
+        body="A self-hosted Flask link shortner template that aims to be a one-click deployment on serverless platforms"
+        language="Python"
+        languageColor="#3572A5"
         year="2023"
         tags={["HTML", "Flask", "Python", "Postgres", "Redis"]}
       />
@@ -86,6 +86,24 @@ import Card from "../components/Card.astro";
         tags={["Next", "Typescript", "React"]}
       />
       <Card
+        href="https://github.com/pinapelz/vtuber-captcha"
+        title="Vtuber Captcha"
+        body="A bring your own UI captcha API that uses VTuber images to verify that the user is 'human'. Can also verify answers server side"
+        language="Python"
+        languageColor="#3572A5"
+        year="2023"
+        tags={["Python", "Flask", "Postgres", "Redis"]}
+      />
+      <Card
+      href="https://blog.pinapelz.com"
+      title="Personal Blog"
+      body="My personal blog where I ramble about various technical topics, projects, and other things that interest me"
+      language="Astro"
+      languageColor="#ff5a03",
+      year="2023"
+      tags={["Astro", "HTML", "Javascript", "Markdown"]}
+    />
+      <Card
         href="https://github.com/pinapelz/Signpost"
         title="Signpost"
         body="A KV storage solution designed for hosting plaintext data for whatever purpose you need. Designed to host announcements/data for web aplications"
@@ -94,6 +112,15 @@ import Card from "../components/Card.astro";
         year="2024"
         tags={["Vite", "React", "Typescript", "Redis"]}
       />
+      <Card
+      href="https://github.com/pinapelz/ffxiv-chronowatcher"
+      title="ffxiv-chronowatcher"
+      body="A Rust library for calculating Eorzean time and predicting future zone forecasts in Final Fantasy XIV. Published on crates.io"
+      language="Rust"
+      languageColor="#dea584",
+      year="2024"
+      tags={["Rust", "Crates.io"]}
+    />
     </ul>
     <br/>
     <a href="https://knowledge.pinapelz.com/personal/tools" class="mt-2 hover:underline text-2xl animate-pulse">and also a few smaller tools...</a>
