update project descriptions

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -78,7 +78,7 @@ import Card from "../components/Card.astro";
       />
       <Card
         href="https://github.com/pinapelz/IMissVTuber"
-        title="IMissVtuber"
+        title="IMissVTuber"
         body="A boilerplate template application for easily deploying a fansite for any VTuber listed on Holodex"
         language="Typescript"
         languageColor="#3178c6"
@@ -97,11 +97,11 @@ import Card from "../components/Card.astro";
       <Card
       href="https://blog.pinapelz.com"
       title="Personal Blog"
-      body="My personal blog where I ramble about various technical topics, projects, and other things that interest me"
+      body="My personal blog where I ramble about various technical topics, projects, and other things that interest me. Written in Astro and uses MDX which combines the ease of markdown with the interactivity of React"
       language="Astro"
       languageColor="#ff5a03",
       year="2023"
-      tags={["Astro", "HTML", "Javascript", "Markdown"]}
+      tags={["Astro", "HTML", "Javascript", "MDX", "Markdown"]}
     />
       <Card
         href="https://github.com/pinapelz/Signpost"
@@ -115,7 +115,7 @@ import Card from "../components/Card.astro";
       <Card
       href="https://github.com/pinapelz/ffxiv-chronowatcher"
       title="ffxiv-chronowatcher"
-      body="A Rust library for calculating Eorzean time and predicting future zone forecasts in Final Fantasy XIV. Published on crates.io"
+      body="A Rust library for calculating Eorzean time and predicting future zone forecasts in Final Fantasy XIV. Unittested and published on crates.io"
       language="Rust"
       languageColor="#dea584",
       year="2024"
