--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -86,15 +86,6 @@ import Card from "../components/Card.astro";
         tags={["Next", "Typescript", "React"]}
       />
       <Card
-        href="https://github.com/pinapelz/vtuber-captcha"
-        title="Vtuber Captcha"
-        body="A bring your own UI captcha API that uses VTuber images to verify that the user is 'human'. Can also verify answers server side"
-        language="Python"
-        languageColor="#3572A5"
-        year="2023"
-        tags={["Python", "Flask", "Postgres", "Redis"]}
-      />
-      <Card
       href="https://blog.pinapelz.com"
       title="Personal Blog"
       body="My personal blog where I ramble about various technical topics, projects, and other things that interest me. Written in Astro and uses MDX which combines the ease of markdown with the interactivity of React"
@@ -121,6 +112,15 @@ import Card from "../components/Card.astro";
       year="2024"
       tags={["Rust", "Crates.io"]}
     />
+      <Card
+        href="https://github.com/pinapelz/ffxiv-malmstone"
+        title="Malmstone Calculator"
+        body="A IMGui Final Fantasy XIV Dalamud Plugin that hooks into the game and tells you how many more PVP matches you have to play to reach your target goal"
+        language="C#"
+        languageColor="#178600"
+        year="2023"
+        tags={["IMGui", "Dalamud"]}
+      />
     </ul>
     <br/>
     <a href="https://knowledge.pinapelz.com/personal/tools" class="mt-2 hover:underline text-2xl animate-pulse">and also a few smaller tools...</a>
