--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -119,7 +119,7 @@ import Card from "../components/Card.astro";
         language="C#"
         languageColor="#178600"
         year="2023"
-        tags={["IMGui", "Dalamud"]}
+        tags={["ImGui", "Dalamud"]}
       />
     </ul>
     <br/>
