update fediverse and bridged bsky links

--- a/src/components/SocialNavbar.astro
+++ b/src/components/SocialNavbar.astro
@@ -68,14 +68,14 @@ import "@fortawesome/fontawesome-free/css/all.min.css";
             title="Twitter/X"><i class="fab fa-x-twitter"></i></a
         >
         <a
-            href="https://bsky.app/profile/pinapelz.moekyun.me"
+            href="https://bsky.app/profile/pinapelz.social.moekyun.me"
             class="dark-social-icon"
             title="Bluesky"><img src="Bluesky_Logo.svg" width="60%" /></a
         >
         <a
-            href="https://mk.arks.cafe/@pinapelz"
+            href="https://social.moekyun.me/@pinapelz"
             class="dark-social-icon"
-            title="Fediverse (Misskey)"
+            title="Fediverse"
             ><img src="fediverse.svg" width="75%" /></a
         >
         <a
