--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -32,13 +32,13 @@ import Card from "../components/Card.astro";
         tags={["Java", "JDA"]}
       />
       <Card
-        href="https://github.com/Patchwork-Archive/Patchwork-Karaoke"
-        title="lrc-karaoke-player"
-        body="A client-side web app that allows the playback of video files synchronzied with both .lrc lyrics and YouTube srv3 styled subtitles"
-        language="Typescript"
-        languageColor="#3178c6"
-        year="2023"
-        tags={["Typescript", "React"]}
+        href="https://github.com/pinapelz/brokenithm-evolved-ios-umi"
+        title="brokenithm-evolved-ios-umi"
+        body="A low-level bridge that converts chuniio IO input and UMIGURI LED signals to brokenitm-evolved compatible iOS apps"
+        language="Python"
+        languageColor="#3572A5"
+        year="2025"
+        tags={["Python", "C#"]}
       />
       <Card
         href="https://github.com/pinapelz/NijiTrack"
@@ -77,13 +77,13 @@ import Card from "../components/Card.astro";
         tags={["HTML", "Flask", "Python", "Postgres", "Redis"]}
       />
       <Card
-        href="https://github.com/pinapelz/IMissVTuber"
-        title="IMissVTuber"
-        body="A boilerplate template application for easily deploying a fansite for any VTuber listed on Holodex"
-        language="Typescript"
-        languageColor="#3178c6"
-        year="2023"
-        tags={["Next", "Typescript", "React"]}
+        href="https://github.com/pinapelz/tiny-time-tracker"
+        title="tiny-time-tracker"
+        body="A tiny Rust game playtime tracker for Windows that works for any executable. Takes advantage of existing OS utilities to avoid polling. "
+        language="Rust"
+        languageColor="#dea584"
+        year="2025"
+        tags={["Rust", "Askama", "Tailwind"]}
       />
       <Card
       href="https://blog.pinapelz.com"
@@ -95,13 +95,13 @@ import Card from "../components/Card.astro";
       tags={["Astro", "HTML", "Javascript", "MDX", "Markdown"]}
     />
       <Card
-        href="https://github.com/pinapelz/Signpost"
-        title="Signpost"
-        body="A KV storage solution designed for hosting plaintext data for whatever purpose you need. Designed to host announcements/data for web aplications"
+        href="https://github.com/pinapelz/573-updates"
+        title="573-UPDATES"
+        body="A highly modular scraper and news site for various arcade games. Scrapes to JSON and deploys to a SPA"
         language="Typescript"
         languageColor="#3178c6",
-        year="2024"
-        tags={["Vite", "React", "Typescript", "Redis"]}
+        year="2025"
+        tags={["React", "Typescript", "Python"]}
       />
       <Card
       href="https://github.com/pinapelz/ffxiv-chronowatcher"
