--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -10,7 +10,7 @@ import Card from "../components/Card.astro";
     <p class="text-center mb-4">
       Here are some of my projects. I love tinkering with stuff so for a more complete list, visit my <a class="font-bold" href="https://github.com/pinapelz">Github</a>
       </br>
-      <a href="/contributions" class="mt-2 hover:underline text-center font-bold text-3xl animate-pulse">Open Source Contributions</a>
+      <a href="https://github.com/pulls?q=author%3Apinapelz+-repo%3Apinapelz%2Fupptime+-repo%3Apinapelz%2Fpinapelz+-user%3Apinapelz" class="mt-2 hover:underline text-center font-bold text-3xl animate-pulse">Open Source Contributions</a>
     </p>
     <ul role="list" class="link-card-grid">
       <Card
